more spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ a {
   text-decoration: none;
   color: white;
   text-align: center;
-  background-color: #333
+  background-color: #333;
 }
 
 ul {
@@ -223,7 +223,10 @@ small {
 
 @media only screen and (min-width: 25em) {
 
-
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
 
 }
 
@@ -242,7 +245,6 @@ small {
   section p {
     margin: 2rem;
   }
-
 
   .link-card:nth-child(1n) {
     width: 50%;
@@ -281,7 +283,6 @@ small {
     line-height: 1.5;
   }
 
-
   .link-card:nth-child(1n) {
     width: 25%;
     float: left;
@@ -303,7 +304,7 @@ small {
     float: left;
   }
 
-  .chef-group:nth-child(3){
+  .chef-group:nth-child(3) {
     width: 33%;
     float: left;
   }
@@ -321,4 +322,6 @@ small {
   html {
     font-size: 130%;
     line-height: 1.7;
+  }
+
 }
